# proxynaut

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/proxynaut-cli/: Cargo.toml
crates/proxynaut-cli/src/: main.rs
crates/proxynaut-core/: Cargo.toml
crates/proxynaut-core/src/: lib.rs
docs/: SPEC.md
