[package]
name = "proxynaut-core"
description = "Core library for the proxynaut SOCKS5/HTTP proxy daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
russh = { workspace = true }
russh-keys = { workspace = true }
hashring = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
interprocess = { workspace = true }
rpassword = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
